--- a/backups/9_18_2020/index.html
+++ b/backups/9_18_2020/index.html
@@ -122,7 +122,7 @@
             <br />
             <!--End of Boostrap work -->
             <!--Start of CAD/CAFM work -->          
-              <div class="projects-grid center">
+              <div class="center">
                 <h2 id="autocad" class="center" style="color:#FD6585; display: inline-block; padding-top:200px;">
                   Here are a few examples of my AutoCAD Polylining, Revit Examples, and some other work I'm proud of.
                 </h2>
@@ -162,11 +162,11 @@
           <!--Start of Side Proejects -->
 					<br />
         <section id="side-projects">
+          <h2 class="center" style="color:#FD6585;  padding-top:200px; padding-bottom:100px;">
+            Side Projects I've completed in my spare time.
+          </h2>
           <!--side project buttons start-->
             <div class="center">
-              <h2 class="" style="color:#FD6585;">
-                Side Projects I've completed in my spare time.
-              </h2>
 							<a href="bootstrap_cheatsheet/index.html" target="_blank" class="btn btn-success btn-lg zoombtn" color="white" style="margin: 15px;">
               {&nbsp;Bootstrap CheatSheet&nbsp;}</a>
 							<a href="htmlcheatsheet/index.html" target="_blank" class="btn btn-success btn-lg zoombtn" color="white" style="margin: 15px;">
