--- a/index - Copy.html
+++ b/index - Copy.html
@@ -167,11 +167,11 @@
           </h2>
           <!--side project buttons start-->
             <div class="center">
-							<a href="bootstrap_cheatsheet/index.html" target="_blank" class="btn btn-success btn-lg zoombtn" color="white" style="margin: 15px;">
+							<a href="bootstrap_cheatsheet/index.html" target="_blank" class="btn btn-info btn-lg zoombtn" color="white" style="margin: 15px;">
               {&nbsp;Bootstrap CheatSheet&nbsp;}</a>
-							<a href="htmlcheatsheet/index.html" target="_blank" class="btn btn-success btn-lg zoombtn" color="white" style="margin: 15px;">
+							<a href="htmlcheatsheet/index.html" target="_blank" class="btn btn-info btn-lg zoombtn" color="white" style="margin: 15px;">
               {&nbsp;HTML CheatSheet&nbsp;}</a>
-							<a href="csscheatsheet/index.html" target="_blank" class="btn btn-success btn-lg zoombtn" color="white" style="margin: 15px;">
+							<a href="csscheatsheet/index.html" target="_blank" class="btn btn-info btn-lg zoombtn" color="white" style="margin: 15px;">
               {&nbsp;CSS CheatSheet&nbsp;}
               </a>
 							<a href="animatedLoginForm/index.html" target="_blank" class="btn btn-info btn-lg zoombtn" color="white" style="margin: 15px;">
@@ -189,16 +189,16 @@
               <a href="lessSandbox/index.html" target="_blank" class="btn btn-info btn-lg zoombtn" color="white" style="margin: 15px;">
                 {&nbsp;CSS LESS Project&nbsp;}
               </a>
-              <a href="JavaScriptPractice/index.html" target="_blank" class="btn btn-warning btn-lg zoombtn" color="white" style="margin: 15px;">
+              <a href="JavaScriptPractice/index.html" target="_blank" class="btn btn-info btn-lg zoombtn" color="white" style="margin: 15px;">
                 {&nbsp;JavaScript DOM Elements&nbsp;}
               </a>
-              <a href="carousel/index.html" target="_blank" class="btn btn-warning btn-lg zoombtn" color="white" style="margin: 15px;">
+              <a href="carousel/index.html" target="_blank" class="btn btn-info btn-lg zoombtn" color="white" style="margin: 15px;">
                 {&nbsp;Typing Text Animation&nbsp;}
               </a>
-							<a href="rock-paper-scissors/index.html" target="_blank" class="btn btn-warning btn-lg zoombtn" color="white" style="margin: 15px;">
+							<a href="rock-paper-scissors/index.html" target="_blank" class="btn btn-info btn-lg zoombtn" color="white" style="margin: 15px;">
               {&nbsp;Rock Paper Scissors&nbsp;}
               </a>
-              <a href="snake/index.html" target="_blank" class="btn btn-warning btn-lg zoombtn" color="white" style="margin: 15px;">
+              <a href="snake/index.html" target="_blank" class="btn btn-info btn-lg zoombtn" color="white" style="margin: 15px;">
               {&nbsp;Caterpillar&nbsp;}
               </a>
             </div>
