--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		</head>
     <body>
       <!--Navbar-->
-      <nav class="navbar " style="position: fixed;  background-color: #1A1B41; border-radius: 5px; margin: 5px;">
+      <nav class="navbar " style="position: fixed;  background-color:  rgb(27, 27, 27); border-radius: 5px; margin: 5px;">
         <!-- Navbar brand -->
         <!--<a class="navbar-brand">Nav Menu</a> -->
           <!-- Collapse button -->
@@ -198,8 +198,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="myFile.js"></script>
-    <script>
-      document.body.style.backgroundColor = "rgb(211, 207, 207);";
-    </script>
   </body>
 </html>
