--- a/backups/9_20_2020/index - Copy.html
+++ b/backups/9_20_2020/index - Copy.html
@@ -84,43 +84,43 @@
       <div class="wrapper site-background">
       <h1 id="projects">Web Development Gallery</h1>
         <div class="img-area">
-          <div class="single-img zoom" style="background-color:white; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
+          <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
             <img alt="Bootstrap Upgrade exmaple" class="project-image img-thumbnail example-img-size single-img" src="img/teamSpaceScenario.PNG" >
             <a href="img/teamSpaceScenario.PNG" target="_blank" ><p style="color:black;"><span class="btn btn-success btn-sm zoombtn">View</span></p></a>
             <p style="color:black;">SpaceView Bootstrap Upgrade 1</p>
           </div>
-          <div class="single-img zoom" style="background-color:white; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
+          <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
             <img alt="Bootstrap Upgrade exmaple" class="project-image img-thumbnail example-img-size single-img" src="img/teamSpaceUpgrade.png" >
             <a href="img/teamSpaceUpgrade.png" target="_blank"><p style="color:black;"><span class="btn btn-success btn-sm zoombtn">View</span></p></a>
             <p style="color:black;">SpaceView Bootstrap Upgrade 2</p>
           </div>
-          <div class="single-img zoom" style="background-color:white; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
+          <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
             <img alt="Bootstrap Upgrade exmaple" class="project-image img-thumbnail example-img-size single-img" src="img/sv5/room.png" >
             <a href="img/sv5/room.png" target="_blank"><p style="color:black;"><span class="btn btn-success btn-sm zoombtn">View</span></p></a>
             <p style="color:black;">SpaceView Bootstrap Upgrade 3</p>
           </div>  
           <!--resize-->
-          <div class="single-img zoom" style="background-color:white; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
+          <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
             <img alt="Bootstrap Upgrade exmaple" class="project-image img-thumbnail example-img-size single-img" src="img/sv5/buildings.png">
             <a href="img/sv5/buildings.png" target="_blank"><p style="color:black;"><span class="btn btn-success btn-sm zoombtn">View</span></p></a>
             <p style="color:black;">SpaceView Bootstrap Upgrade 4</p>
           </div>
-          <div class="single-img zoom"style="background-color:white; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
+          <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
             <img alt="Portfolio Upgrade" class="project-image img-thumbnail example-img-size single-img" src="img/portfolioUpgrade.PNG" >
             <a href="img/portfolioUpgrade.PNG" target="_blank"><p style="color:black;"><span class="btn btn-success btn-sm zoombtn">View</span></p></a>
-            <p style="color:black;">Upgrading Portfolio 7/15/2020</p>
+            <p style="color:black;">Upgrading Portfolio 9/01/2020</p>
           </div>
-          <div class="single-img zoom"style="background-color:white; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
+          <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
             <img alt="Portfolio Upgrade" class="project-image img-thumbnail example-img-size single-img" src="img/portfolioUpgrade2.PNG" >
             <a href="img/portfolioUpgrade2.PNG" target="_blank"><p style="color:black;"><span class="btn btn-success btn-sm zoombtn">View</span></p></a>
-            <p style="color:black;">Upgrading Portfolio 8/25/2020</p>
+            <p style="color:black;">Upgrading Portfolio 9/05/2020</p>
           </div>
-          <div class="single-img zoom"style="background-color:white; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
+          <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
             <img alt="Portfolio Upgrade" class="project-image img-thumbnail example-img-size single-img" src="img/portfolioUpgrade3.PNG" >
             <a href="img/portfolioUpgrade3.PNG" target="_blank"><p style="color:black;"><span class="btn btn-success btn-sm zoombtn">View</span></p></a>
-            <p style="color:black;">Upgrading Portfolio 9/05/2020</p>  
+            <p style="color:black;">Upgrading Portfolio 9/15/2020</p>  
           </div>
-          <div class="single-img zoom"style="background-color:white; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
+          <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
             <img alt="Portfolio Upgrade" class="project-image img-thumbnail example-img-size single-img" src="img/portfolioUpgrade4.PNG" >
             <a href="img/portfolioUpgrade4.PNG" target="_blank"><p style="color:black;"><span class="btn btn-success btn-sm zoombtn">View</span></p></a>
               <p style="color:black;">Upgrading Portfolio 9/20/2020</p>
@@ -132,32 +132,32 @@
         <div class="wrapper site-background">
           <h1 id="autocad">CAD | Revit | Other Gallery</h1>
             <div class="img-area">
-              <div class="single-img zoom" style="background-color:white; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
+              <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
                 <img alt="Polyline example 1" class="project-image img-thumbnail example-img-size single-img" src="img/plines.PNG" >
                 <a href="img/plines.PNG" target="_blank"><p style="color:black;"><span class="btn btn-success btn-sm zoombtn">View</span></p></a>
                 <p style="color:black;">AutoCAD Polylines 1</p>
               </div>
-              <div class="single-img zoom" style="background-color:white; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
+              <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
                 <img alt="Polyline example 2" class="project-image img-thumbnail example-img-size single-img" src="img/plines2.PNG">
                 <a href="img/plines2.PNG" target="_blank"><p style="color:black;"><span class="btn btn-success btn-sm zoombtn">View</span></p></a>
                 <p style="color:black;">AutoCAD Polylines 2</p>
               </div>
-              <div class="single-img zoom" style="background-color:white; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
+              <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
                 <img alt="Polyline example 2" class="project-image img-thumbnail example-img-size single-img" src="img/cad/25k_with_category.PNG">
                 <a href="img/cad/25k_with_category.PNG" target="_blank"><p style="color:black;"><span class="btn btn-success btn-sm zoombtn">View</span></p></a>
                 <p style="color:black;">AutoCAD Room Category assignment</p>
               </div>
-              <div class="single-img zoom"style="background-color:white; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
+              <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
                 <img alt="Sample Revit model home" class="project-image img-thumbnail example-img-size single-img" src="img/getting_started_01.PNG" >
                 <a href="img/getting_started_01.PNG" target="_blank"><p style="color:black;"><span class="btn btn-success btn-sm zoombtn">View</span></p></a>
                 <p style="color:black;">Revit Home Model</p>
               </div>
-              <div class="single-img zoom"style="background-color:white; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
+              <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
                 <img alt="Excel Direct Connect Report" class="project-image img-thumbnail example-img-size single-img" src="img/exceldc.PNG" >
                 <a href="img/exceldc.PNG" target="_blank"><p style="color:black;"><span class="btn btn-success btn-sm zoombtn">View</span></p></a>
                 <p style="color:black;">Excel Direct Connect Report</p>
               </div>
-              <div class="single-img zoom"style="background-color:white; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
+              <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
                 <img alt="Aquarium" class="project-image img-thumbnail example-img-size single-img" src="img/aq.PNG" >
                 <a href="img/aq.PNG" target="_blank"><p style="color:black;"><span class="btn btn-success btn-sm zoombtn">View</span></p></a>
                 <p style="color:black; word-wrap: break-word;">MBA Security Asset Project</p>
@@ -172,38 +172,35 @@
           <!--side project buttons start-->
             <div class="center site-background">
               <a href="bootstrap_cheatsheet/index.html" target="_blank" class="btn btn-info btn-lg zoombtn" color="white" style="margin: 15px;">
-              {&nbsp;Bootstrap CheatSheet&nbsp;}</a>
+              Bootstrap CheatSheet</a>
               <a href="htmlcheatsheet/index.html" target="_blank" class="btn btn-info btn-lg zoombtn" color="white" style="margin: 15px;">
-              {&nbsp;HTML CheatSheet&nbsp;}</a>
+              HTML CheatSheet</a>
               <a href="csscheatsheet/index.html" target="_blank" class="btn btn-info btn-lg zoombtn" color="white" style="margin: 15px;">
-              {&nbsp;CSS CheatSheet&nbsp;}
+              CSS CheatSheet
               </a>
               <a href="animatedLoginForm/index.html" target="_blank" class="btn btn-info btn-lg zoombtn" color="white" style="margin: 15px;">
-              {&nbsp;Animated Login Form&nbsp;}
-              </a>
-              <a href="tribute-page/tribute.html" target="_blank" class="btn btn-info btn-lg zoombtn" color="white" style="margin: 15px;">
-              {&nbsp;freeCodeCamp's Tribute Page&nbsp;}
+              Animated Login Form
               </a>
               <a href="mywebsite/index.html" target="_blank" class="btn btn-info btn-lg zoombtn" color="white" style="margin: 15px;">
-              {&nbsp;Example Website&nbsp;}
+              Example Website
               </a>
               <a href="imageGallery/index.html" target="_blank" class="btn btn-info btn-lg zoombtn" color="white" style="margin: 15px;">
-              {&nbsp;CSS FlexBox Image Gallery&nbsp;}
+              CSS FlexBox Image Gallery
               </a>
               <a href="lessSandbox/index.html" target="_blank" class="btn btn-info btn-lg zoombtn" color="white" style="margin: 15px;">
-                {&nbsp;CSS LESS Project&nbsp;}
+                CSS LESS Project
               </a>
               <a href="JavaScriptPractice/index.html" target="_blank" class="btn btn-info btn-lg zoombtn" color="white" style="margin: 15px;">
-                {&nbsp;JavaScript DOM Elements&nbsp;}
+                JavaScript DOM Elements
               </a>
               <a href="carousel/index.html" target="_blank" class="btn btn-info btn-lg zoombtn" color="white" style="margin: 15px;">
-                {&nbsp;Typing Text Animation&nbsp;}
+                Typing Text Animation
               </a>
               <a href="rock-paper-scissors/index.html" target="_blank" class="btn btn-info btn-lg zoombtn" color="white" style="margin: 15px;">
-              {&nbsp;Rock Paper Scissors&nbsp;}
+              Rock Paper Scissors
               </a>
               <a href="snake/index.html" target="_blank" class="btn btn-info btn-lg zoombtn" color="white" style="margin: 15px;">
-              {&nbsp;Caterpillar&nbsp;}
+              Caterpillar
               </a>
             </div>
           </div>
